--- a/style.css
+++ b/style.css
@@ -18,6 +18,20 @@ h1 {
 }
 
 /* Navigation */
+.nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+.nav li {
+  margin: 0;
+  padding: 0;
+}
+
 nav a {
   color: #fafafa;
   text-decoration: none;
@@ -49,7 +63,7 @@ nav a:hover {
 
 .dropdown-menu a {
   display: block;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0rem;
   color: #000;
 }
 
